--- a/app/ui/fate-card-resolution.module.scss
+++ b/app/ui/fate-card-resolution.module.scss
@@ -1,19 +1,7 @@
-.title {
-    position: absolute;
-    width: 100%;
-    font-size: 4.5mm;
-    top: 40mm;
-    left: -26mm;
-    text-align: right;
-    text-transform: capitalize;
-    transform: rotate(-90deg);
-    color: white;
-}
-
 .alert {
     position: absolute;
     width: 100%;
-    padding: 2mm 6mm;
+    padding: 2mm 5mm;
     top: 4mm;
     left: 0;
     text-align: center;
@@ -26,9 +14,9 @@
 
 .caption {
     width: 100%;
-    font-size: 4.5mm;
-    line-height: 4.5mm;
-    font-weight: bold;
+    font-size: 5.5mm;
+    line-height: 5mm;
+    font-weight: 600;
 }
 
 .exclamation {
@@ -40,7 +28,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    top: 20mm;
+    top: 0;
     left: 0;
-    padding: 8mm 7mm 13mm 15mm;
+    padding: 24mm 6mm 11mm 6mm;
 }
